--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,17 @@
 
     <build>
         <plugins>
+          <plugin>
+             <groupId>org.owasp</groupId>
+             <artifactId>dependency-check-maven</artifactId>
+             <executions>
+                 <execution>
+                     <goals>
+                         <goal>check</goal>
+                     </goals>
+                 </execution>
+             </executions>
+           </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
